# window-display-mcp

./: README.md  pyproject.toml
src/window_display_mcp/: server.py
