[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "window-display-mcp"
version = "0.1.0"
description = "MCP server for shop window display visual merchandising vocabulary"
authors = [{name = "Dal Marsters"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
